--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "stripe:listen": "stripe listen --forward-to localhost:3000/api/stripe"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
+    "@stripe/stripe-js": "^1.52.1",
     "@t3-oss/env-nextjs": "^0.2.1",
     "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.18.0",
@@ -19,6 +21,7 @@
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
     "aws-sdk": "^2.1368.0",
+    "micro": "^10.0.1",
     "next": "^13.2.4",
     "next-auth": "^4.21.0",
     "openai": "^3.2.1",
