--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@trpc/server": "^10.18.0",
     "aws-sdk": "^2.1368.0",
     "clsx": "^1.2.1",
+    "lucide-react": "^0.216.0",
     "micro": "^10.0.1",
     "next": "^13.2.4",
     "next-auth": "^4.21.0",
+    "next-themes": "^0.2.1",
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
