--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
     "aws-sdk": "^2.1368.0",
+    "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "lucide-react": "^0.216.0",
     "micro": "^10.0.1",
@@ -32,6 +33,7 @@
     "react-dom": "18.2.0",
     "stripe": "^12.3.0",
     "superjson": "1.12.2",
+    "tailwind-merge": "^1.12.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
