--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "stripe": "^12.3.0",
     "superjson": "1.12.2",
     "tailwind-merge": "^1.12.0",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/eslint": "^8.21.3",
