--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "aws-sdk": "^2.1368.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "framer-motion": "^10.12.16",
     "lucide-react": "^0.216.0",
     "micro": "^10.0.1",
     "next": "^13.2.4",
